[package]
name = "xtrace"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base62 = "2.0.0"
chrono = "0.4.22"
clap = { version = "3", features = ["derive"] }
tabled = "0.8.0"
thiserror = "1.0.32"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
utmp = {path="utmp", version = "0.1.0"}



#[target.x86_64-unknown-linux-gnu]
#linker = "x86_64-unknown-linux-gnu-gcc"

[profile.release]
#inherits = "release"
opt-level = "z"  # Optimize for size.
panic = "abort"
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
lto = true
